fixed table overflow on list page and other minor improvements

--- a/frontend/src/components/Receivers/AddForm/style.css
+++ b/frontend/src/components/Receivers/AddForm/style.css
@@ -1,7 +1,9 @@
 div.text-center {
-    /*margin: 25px 50px;*/
-    padding-bottom: 4%;
-    padding-top: 4%;
+    padding-bottom: 2%;
+    padding-top: 3%;
+    width: 40%;
+    border-radius: 20px;
+    margin: auto;
     background-color: rgba(230, 242, 252, 1);
 }
 
