--- a/frontend/src/components/Receivers/List/style.css
+++ b/frontend/src/components/Receivers/List/style.css
@@ -1,6 +1,11 @@
-div.listform, table {
+div.listform {
     width: 80% !important;
     margin: auto;
+}
+
+div.list div.col-10 {
+    height: 400px !important;
+    overflow-y: scroll !important;
 }
 
 div.listform {
@@ -9,8 +14,7 @@ div.listform {
 }
 
 div.addreceiver button, div.addformbutton button {
-    margin: 20px 0 20px 60px;
-    padding: 20px 20px;
+    margin: 0 0 20px 60px;
     font-family: monospace, "Courier New";
     background-color: white;
     color: darkblue;
