--- a/frontend/src/components/SendEmailForm/style.css
+++ b/frontend/src/components/SendEmailForm/style.css
@@ -1,4 +1,4 @@
-div.text-center {
+div.send-form div.text-center {
     width: 70%;
     background-color: rgba(230, 242, 252, 1);
     margin: auto;
